force-app/main/default/objects/AB_Test_Result__c/AB_Test_Result__c.object-meta.xml
<CustomObject>
    <description>Individual user interactions and conversions for A/B tests</description>
    <label>A/B Test Result</label>
    <nameField>
        <displayFormat>RES-{0000000}</displayFormat>
        <label>Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>A/B Test Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>