force-app/main/default/objects/AB_Test_Result__c/fields/Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Date__c</fullName>
    <description>Date and time when user was assigned to variant</description>
    <label>Assignment Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>