force-app/main/default/objects/AB_Test_Result__c/fields/Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Date__c</fullName>
    <description>Date and time when user converted</description>
    <label>Conversion Date</label>
    <type>DateTime</type>
</CustomField>