force-app/main/default/objects/AB_Test_Result__c/fields/Conversion_Type__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Type__c</fullName>
    <description>Type of conversion event</description>
    <label>Conversion Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>registration_complete</fullName>
                <label>Registration Complete</label>
            </value>
            <value>
                <fullName>form_submit</fullName>
                <label>Form Submit</label>
            </value>
            <value>
                <fullName>button_click</fullName>
                <label>Button Click</label>
            </value>
            <value>
                <fullName>page_view</fullName>
                <label>Page View</label>
            </value>
            <value>
                <fullName>email_click</fullName>
                <label>Email Click</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>