force-app/main/default/objects/AB_Test_Result__c/fields/Converted__c.field-meta.xml
<CustomField>
    <fullName>Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the user converted (completed the desired action)</description>
    <label>Converted</label>
    <type>Checkbox</type>
</CustomField>