force-app/main/default/objects/AB_Test_Result__c/fields/User_Identifier__c.field-meta.xml
<CustomField>
    <fullName>User_Identifier__c</fullName>
    <description>User ID or session ID for tracking individual users</description>
    <externalId>true</externalId>
    <label>User Identifier</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>