force-app/main/default/objects/AB_Test_Result__c/fields/Variant_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Variant_Assigned__c</fullName>
    <description>The variant assigned to this user</description>
    <label>Variant Assigned</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Control</fullName>
                <default>true</default>
                <label>Control</label>
            </value>
            <value>
                <fullName>Variant A</fullName>
            </value>
            <value>
                <fullName>Variant B</fullName>
            </value>
            <value>
                <fullName>Variant C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>